--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   backgroud: color image repeat position/size*/
 
   background: var(--bg-url) top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -162,8 +163,19 @@ ul li a:hover {
 }
 
 footer {
-  padding: 24px;
+  padding: 24px 0;
   text-align: center;
+  font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px){
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
 
   /*ion-icon {
